# Mx_Clion

./: .gitignore  CMakeLists.txt  Points worth noticing when coding compiler.md  output.txt  plan.md  wrong_testcases.md
src/backend/: asm_generator.cpp  ir_generator.cpp
src/frontend/: ast_builder.cpp  global_scope_extractor.cpp  semantic_check.cpp  visit_control.cpp
src/include/backend/: asm_generator.h  ir_generator.h
src/include/backend/asm_instruction/: arithmetic.h  asm_instruction.h  control_flow.h  global_instruction.h  mem.h
src/include/backend/stmt/: alloca_stmt.h  binary_stmt.h  call_stmt.h  gep_stmt.h  global_stmt.h  icmp_stmt.h  load_stmt.h  stmt.h  store_stmt.h  variant_rep.h
src/include/backend/stmt/br_stmt/: br_conditional_stmt.h  br_unconditional_stmt.h  ret_stmt.h
src/include/backend/util/: asm_function.h  asm_rep.h  block.h  class_type.h  constant.h  ir_function.h  ir_scope.h  physical_register.h  register.h  virtual_register.h
src/include/backend/util/type/: ir_bool_type.h  ir_int_type.h  ir_null_type.h  ir_ptr_type.h  ir_string_type.h  ir_type.cpp  ir_type.h  ir_type_proto.h  ir_void_type.h  type_getter.h
src/include/frontend/: MxErrorListener.h  ast_builder.h  global_scope_extractor.h  position.h
src/include/frontend/ast/: ASTNode.h  all_ast_nodes.h  ast.h  main_func_node.h  root_node.h  semantic_check.h  visit_control.h
src/include/frontend/ast/def_node/: class_def_node.h  class_func_def_node.h  def_node.h  func_def_node.h  main_func_node.h  var_def_node.h
src/include/frontend/ast/stat_node/: stat_node.h
src/include/frontend/ast/stat_node/def_node/: class_def_node.h  class_func_def_node.h  def_node.h  func_def_node.h  main_func_node.h  var_def_node.h
src/include/frontend/ast/stat_node/regular_stat_node/: assign_stat_node.h  block_node.h  block_stat_node.h  for_stat_node.h  if_stat_node.h  null_stat_node.h  regular_stat_node.h  return_stat_node.h  while_stat_node.h
src/include/frontend/ast/stat_node/regular_stat_node/expr_node/: array_const_node.h  array_expr_node.h  binary_expr_node.h  dot_expr_node.h  expr_node.h  format_string_node.h  func_call_node.h  id_node.h  index_expr_node.h  init_array_expr_node.h  init_array_node.h  init_object_node.h  literal_node.h  null_expr_node.h  paren_expr_node.h  ternary_expr_node.h  this_expr_node.h  type_node.h  unary_expr_node.h
src/include/frontend/ast/terminal_node/: id_node.h  literal_node.h  terminal_node.h
src/include/frontend/ast/type/: bool_type.h  int_type.h  no_type.h  null_type.h  string_type.h  type_type.cpp  type_type.h  void_type.h
src/include/frontend/ast/util/: function.h  scope.cpp  scope.h
src/include/opt/: cfg_construction.h
src/include/parser/: MxBaseListener.h  MxBaseVisitor.h  MxLexer.h  MxListener.h  MxParser.h  MxVisitor.h
src/include/util/: scope.cpp  scope.h
src/lib/: build.sh  builtin.c  builtin.s  builtin_intermediate.ll
src/parser/antlr4/: Mx.g4  Mx.interp  Mx.tokens  MxBaseListener.cpp  MxBaseVisitor.cpp  MxLexer.cpp  MxLexer.interp  MxLexer.tokens  MxListener.cpp  MxParser.cpp  MxStandard.g4  MxVisitor.cpp  astStandard.cpp  automate.sh  main.cpp  output.txt
src/test/: test.cpp
testcases/codegen/: t15.mx
testcases/codegen/scripts/: test_asm.bash  test_llvm_ir.bash
testcases/sema/: judgelist.txt
testcases/sema/array-package/: array-5.mx
testcases/sema/basic-package/: basic-71.mx  basic-72.mx
testcases/sema/codegen-package/: e1.c  e1.mx  e10.c  e10.mx  e2.c  e2.mx  e3.c  e3.mx  e4.c  e4.mx  e5.c  e5.mx  e6.c  e6.mx  e7.c  e7.mx  e8.c  e8.mx  e9.c  e9.mx  t1.cpp  t1.mx  t10.cpp  t10.mx  t11.cpp  t12.mx  t13.mx  t14.mx  t15.mx  t16.mx  t17.cpp  t17.mx  t18.mx  t19.mx  t2.cpp  t2.mx  t20.mx  t21.mx  t22.mx  t23.mx  (+67 more)
testcases/sema/codegen-package/shortest_path/: dijkstra.mx  floyd.mx  spfa.mx
testcases/sema/codegen-package/sorting/: bubble_sort.mx  merge_sort.mx  quick_sort.mx  selection_sort.mx
testcases/sema/codegen-package/std/: queue.mt
testcases/sema/const-array-package/: const-array1.mx  const-array2.mx  const-array4.mx  const-array5.mx  const-array6.mx  const-array7.mx
testcases/sema/formatted-string-package/: formatted-string6.mx  formatted-string7.mx
testcases/sema/scripts/: test.bash  test_all.bash
